--- a/user/templates/users/contact.html
+++ b/user/templates/users/contact.html
@@ -48,7 +48,7 @@
 
                                             <br>
 
-                                            <span class="text-truncate me-0"><i class=""></i>{{ post.qualification}}</span>
+                                            <span class="text-truncate me-0"><i class=""></i>PAID : {{ post.qualification}} $ </span>
                                             <br>
 
                                             <span class="text-truncate me-0"><i class=""></i>{{ post.description}}</span>
