--- a/user/templates/users/category.html
+++ b/user/templates/users/category.html
@@ -42,22 +42,28 @@
         <!-- Header End -->
         <div class="container-xxl py-15">
             <div class="container my-2 pt-2 pb-">
-                <img class="img-fluid " src="{% static 'img/AdobeStock_683806282_Preview_Editorial_Use_Only.png' %}" style="width: 85%; margin-top: 15%;">
+                <center>You should have at least $100 balance to use this service.</center>
 
                 <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">PAYMENT IN BITCOIN </h1>
 
-                <div class="row g-8">
-                    {% for jobs in jobs %}
-                    <div class="col-lg-12 col-sm-8 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item rounded p-4" >
+<!-- Bitcoin address and QR code content -->
+<div class="row g-8 justify-content-center align-items-center">
+    {% for jobs in jobs %}
+    <div class="col-lg-12 col-sm-8 wow fadeInUp" data-wow-delay="0.1s">
+        <a class="cat-item rounded p-4 text-center">
+            <h4 class="mb-3">BTC WALLET <br> {{ bitcoin_address }}</h4><br>
+            <!-- Display the QR code image -->
+            <img src="{% static 'img/benumb.png' %}" alt="Bitcoin QR Code" style="max-width: 300px; max-height: 300px;">
+        </a>
+        <br>
+        <center>It can take 5-30 min (after 1st confirmation). Exact time depends on payment fee you set.</center>
+        <br>
 
-                            <h4 class="mb-3">BTC WALLET   <br> {{jobs.jname}}</h4> <br>
+    </div>
+    {% endfor %}
+</div>
 
-                            <p class="mb-0">{{jobs.jnumber}}</p>
-                        </a>
-                    </div>
-                    {% endfor %}
-                </div>
+
             </div>
 
         </div>
