--- a/user/templates/users/job-detail.html
+++ b/user/templates/users/job-detail.html
@@ -40,7 +40,7 @@
                                             <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$: {{ post.salary}}</span>
                                             <br>
 
-                                            <span class="text-truncate me-0"><i class=""></i>{{ post.qualification}}</span>
+                                            <span class="text-truncate me-0"><i class=""></i>PAID : {{ post.qualification}} $ </span>
                                             <br>
 
                                             <span class="text-truncate me-0"><i class=""></i>{{ post.description}}</span>
