--- a/user/templates/users/profile.html
+++ b/user/templates/users/profile.html
@@ -28,12 +28,12 @@
 
 </head>
 <body>
-    <div class="container-xxl bg-white p-0">
+<div class="container-xxl bg-white p-0">
 
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <a href="" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-        <h1 class="m-0 text-primary">GreenCards</h1>
+        <h1 class="m-0 text-primary">Benumb</h1>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -108,16 +108,16 @@
                             <label>Balance:</label>
                         </div>
                         <div class="col-md-6">
-                            <p>{{user.phone_no}}</p>
+                            <p>{{profile.balance}}</p>
                         </div>
                     </div>
                 </div>
-               <!-- <a href="{% url 'profile_update' %}" class="btn btn-primary">Edit Profile</a>  -->
+               <a href="{% url 'profile_update' %}" class="btn btn-primary">Edit Profile</a>  
             </div>
         </div>
 </div>
 </div>
-    </div>
+</div>  
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
